erDiagram
    USERS {
        int id PK
        string name
        string email UK
        string password_hash
        string nickname
        string gender
        string bio
        string phone
        string school
        string major
        string job_title
        string avatar_url
    }

    CLASSES {
        int id PK
        string name
        text description
        string status
        string code
        datetime created_at
        int created_by FK
        string stage
        bool allow_join
        string note
    }

    CLASS_STUDENTS {
        int id PK
        string name
        string stu_id
        string status
        string parent_phone
        int accuracy
        int submit
        int class_id FK
        datetime created_at
    }

    STUDENT_PROFILES {
        int id PK
        int user_id
        int class_id FK
        int student_id FK
        datetime created_at
        text analysis_json
        datetime analysis_updated_at
        datetime analysis_latest_completed_at
    }

    LESSONS {
        int id PK
        string title
        text description
        int created_by FK
        datetime created_at
    }

    EXERCISES {
        int id PK
        string title
        text description
        text content_json
        int created_by FK
        datetime created_at
    }

    RESOURCE_PUBLICATIONS {
        int id PK
        string resource_type
        int resource_id
        int class_id
        text student_ids
        text accuracy_rule
        string mode
        bool revoked
        datetime revoked_at
        int created_by FK
        datetime created_at
    }

    RESOURCE_ASSIGNMENTS {
        int id PK
        int publish_id FK
        int student_id FK
        string status
        int score
        datetime completed_at
        datetime created_at
    }

    EXERCISE_SUBMISSIONS {
        int id PK
        int publish_id FK
        int student_id FK
        text answers
        text auto_result
        int auto_score
        int teacher_score
        text teacher_detail
        int total_score
        text teacher_comment
        string status
        datetime created_at
        datetime updated_at
    }

    USERS ||--o{ CLASSES : created_by
    CLASSES ||--o{ CLASS_STUDENTS : class_id
    USERS ||--|| STUDENT_PROFILES : user_id
    CLASSES ||--o{ STUDENT_PROFILES : class_id
    CLASS_STUDENTS ||--o{ STUDENT_PROFILES : student_id

    USERS ||--o{ LESSONS : created_by
    USERS ||--o{ EXERCISES : created_by

    USERS ||--o{ RESOURCE_PUBLICATIONS : created_by
    CLASSES ||--o{ RESOURCE_PUBLICATIONS : class_id_logical
    LESSONS ||--o{ RESOURCE_PUBLICATIONS : resource_id_when_lesson
    EXERCISES ||--o{ RESOURCE_PUBLICATIONS : resource_id_when_exercise

    RESOURCE_PUBLICATIONS ||--o{ RESOURCE_ASSIGNMENTS : publish_id
    CLASS_STUDENTS ||--o{ RESOURCE_ASSIGNMENTS : student_id

    RESOURCE_PUBLICATIONS ||--o{ EXERCISE_SUBMISSIONS : publish_id
    CLASS_STUDENTS ||--o{ EXERCISE_SUBMISSIONS : student_id
